src/patternfly/components/NotificationDrawer/notification-drawer.scss
/* ... */
.#{$notification-drawer}__list-item {
  position: relative;
  display: grid;
  grid-template-columns: 1fr auto;
  padding-block-start: var(--#{$notification-drawer}__list-item--PaddingBlockStart);
  padding-block-end: var(--#{$notification-drawer}__list-item--PaddingBlockEnd);
  padding-inline-start: var(--#{$notification-drawer}__list-item--PaddingInlineStart);
  padding-inline-end: var(--#{$notification-drawer}__list-item--PaddingInlineEnd);
  background-color: var(--#{$notification-drawer}__list-item--BackgroundColor);
  border: var(--#{$notification-drawer}__list-item--BorderWidth) solid var(--#{$notification-drawer}__list-item--BorderColor);
  border-radius: var(--#{$notification-drawer}__list-item--BorderRadius);

  &.pf-m-info {
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-info__list-item--BorderColor);
    --#{$notification-drawer}__list-item-header-icon--Color: var(--#{$notification-drawer}__list-item--m-info__list-item-header-icon--Color);
  }

  &.pf-m-warning {
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-warning__list-item--BorderColor);
    --#{$notification-drawer}__list-item-header-icon--Color: var(--#{$notification-drawer}__list-item--m-warning__list-item-header-icon--Color);
  }

  &.pf-m-danger {
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-danger__list-item--BorderColor);
    --#{$notification-drawer}__list-item-header-icon--Color: var(--#{$notification-drawer}__list-item--m-danger__list-item-header-icon--Color);
  }

  &.pf-m-success {
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-success__list-item--BorderColor);
    --#{$notification-drawer}__list-item-header-icon--Color: var(--#{$notification-drawer}__list-item--m-success__list-item-header-icon--Color);
  }

  &.pf-m-custom {
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-custom__list-item--BorderColor);
    --#{$notification-drawer}__list-item-header-icon--Color: var(--#{$notification-drawer}__list-item--m-custom__list-item-header-icon--Color);
  }

  &.pf-m-read {
    --#{$notification-drawer}__list-item--BorderWidth: var(--#{$notification-drawer}__list-item--m-read--BorderWidth);
    --#{$notification-drawer}__list-item--BackgroundColor: var(--#{$notification-drawer}__list-item--m-read--BackgroundColor);
    --#{$notification-drawer}__list-item--BorderColor: var(--#{$notification-drawer}__list-item--m-read--BorderColor);

    position: relative;
  }

  &.pf-m-hoverable {
    cursor: pointer;

    &:hover,
    &:focus {
      background-color: var(--#{$notification-drawer}__list-item--m-hoverable--hover--BackgroundColor);
    }
  }
}

.#{$notification-drawer}__list-item-header {
  display: flex;
  grid-row: 1 / 2;
  grid-column: 1 / 2;
  align-items: baseline;
  margin-block-end: var(--#{$notification-drawer}__list-item-header--MarginBlockEnd);
}

.#{$notification-drawer}__list-item-header-icon {
  margin-inline-end: var(--#{$notification-drawer}__list-item-header-icon--MarginInlineEnd);
  color: var(--#{$notification-drawer}__list-item-header-icon--Color);
}

.#{$notification-drawer}__list-item-header-title {
  font-weight: var(--#{$notification-drawer}__list-item-header-title--FontWeight);
  word-break: break-word;

  &.pf-m-truncate {
    @include pf-v6-line-clamp("var(--#{$notification-drawer}__list-item-header-title--max-lines)");
  }
}

.#{$notification-drawer}__list-item-action {
  grid-row: 1 / 3;
  grid-column: 2 / 3;
  margin-block-start: var(--#{$notification-drawer}__list-item-action--MarginBlockStart);

  &.pf-m-no-offset {
    --#{$notification-drawer}__list-item-action--MarginBlockStart: 0;
  }
}

.#{$notification-drawer}__list-item-description {
  grid-row: 2 / 3;
  grid-column: 1 / 2;
  margin-block-end: var(--#{$notification-drawer}__list-item-description--MarginBlockEnd);
  word-break: break-word;
}

.#{$notification-drawer}__list-item-timestamp {
  grid-row: 3 / 4;
  grid-column: 1 / 2;
  font-size: var(--#{$notification-drawer}__list-item-timestamp--FontSize);
  color: var(--#{$notification-drawer}__list-item-timestamp--Color);
}

.#{$notification-drawer}__group-list {
  display: flex;
  flex-direction: column;
}

.#{$notification-drawer}__group {
  border-block-end: var(--#{$notification-drawer}__group--BorderBlockEndWidth) solid var(--#{$notification-drawer}__group--m-expanded--group--BorderBlockEndColor);

  &.pf-m-expanded {
    min-height: var(--#{$notification-drawer}__group--m-expanded--MinHeight);
    padding-block-end: var(--#{$notification-drawer}__group--m-expanded--PaddingBlockEnd);
  }
}

.#{$notification-drawer}__group-toggle {
  display: flex;
  align-items: baseline;
  width: 100%;
  padding-block-start: var(--#{$notification-drawer}__group-toggle--PaddingBlockStart);
  padding-block-end: var(--#{$notification-drawer}__group-toggle--PaddingBlockEnd);
  padding-inline-start: var(--#{$notification-drawer}__group-toggle--PaddingInlineStart);
  padding-inline-end: var(--#{$notification-drawer}__group-toggle--PaddingInlineEnd);
  background-color: var(--#{$notification-drawer}__group-toggle--BackgroundColor);
  border: none;
  outline-offset: var(--#{$notification-drawer}__group-toggle--OutlineOffset);
}

.#{$notification-drawer}__group-toggle-title {
  @include pf-v6-line-clamp("var(--#{$notification-drawer}__group-toggle-title--max-lines)");

  flex: 1;
  margin-inline-end: var(--#{$notification-drawer}__group-toggle-title--MarginInlineEnd);
  font-size: var(--#{$notification-drawer}__group-toggle-title--FontSize);
  text-align: start;
  word-break: break-word;
}

.#{$notification-drawer}__group-toggle-count {
  margin-inline-start: auto;
  margin-inline-end: var(--#{$notification-drawer}__group-toggle-count--MarginInlineEnd);
}
/* ... */

